@@ -5,19 +5,51 @@ import java.net.http.*;
 import java.nio.file.*;
 import java.text.SimpleDateFormat;
 import java.util.*;
+import java.util.regex.*;
+import java.io.File;
 
 import com.google.gson.Gson;
 import com.google.gson.GsonBuilder;
 
 public class A11YMistralScorerUtil {
 
-	private static final String API_TOKEN = ""; // Replace with your token
-    private static final String MODEL = "mistralai/Mistral-7B-Instruct-v0.3"; // Mistral Model
-    private static final String ENDPOINT = "https://api-inference.huggingface.co/models/" + MODEL; // Mistral End Point
+    private static final String API_TOKEN = ""; // Your token
+    // Switched to TinyLlama
+    private static final String MODEL = "";
+    private static final String ENDPOINT = "https://api-inference.huggingface.co/models/" + MODEL;
 
-    public static void callMistralForA11Y(String a11yJsonPath) {
+    public static A11YAIResultDTO callMistralForA11Y(String a11yJsonPathOrDir, String outputDirOrFile) {
         try {
-            String jsonInput = Files.readString(Paths.get(a11yJsonPath));
+            // --- NEW: Normalize input path for a11yJsonPathOrDir ---
+            File inputFile = new File(a11yJsonPathOrDir);
+            if (!inputFile.exists()) {
+                System.err.println("❌ Input path does not exist: " + a11yJsonPathOrDir);
+                return null;
+            }
+
+            // If directory is passed, find the latest A11Y JSON inside it
+            String finalJsonPath;
+            if (inputFile.isDirectory()) {
+                File[] jsonFiles = inputFile.listFiles((dir, name) -> name.endsWith(".json") && name.contains("A11Y_Violation_Report"));
+                if (jsonFiles == null || jsonFiles.length == 0) {
+                    System.err.println("❌ No A11Y violation JSON found in: " + inputFile.getAbsolutePath());
+                    return null;
+                }
+                Arrays.sort(jsonFiles, Comparator.comparingLong(File::lastModified).reversed());
+                finalJsonPath = jsonFiles[0].getAbsolutePath();
+                System.out.println("✅ Using latest A11Y JSON for scoring: " + finalJsonPath);
+            } else {
+                finalJsonPath = inputFile.getAbsolutePath();
+            }
+
+            // --- Normalize output directory ---
+            File outBase = new File(outputDirOrFile);
+            if (outBase.isFile()) {
+                System.out.println("ℹ️ Provided output path is a file. Using its parent directory: " + outBase.getParent());
+                outBase = outBase.getParentFile();
+            }
+
+            String jsonInput = Files.readString(Paths.get(finalJsonPath));
 
             String prompt = "You are an accessibility (A11Y) testing AI assistant.\n" +
                     "Given the following A11Y violations in JSON format, perform the following:\n" +
@@ -33,7 +65,7 @@ public class A11YMistralScorerUtil {
             String requestJson = gson.toJson(payload);
 
             HttpRequest request = HttpRequest.newBuilder()
-            		.uri(URI.create(ENDPOINT))
+                    .uri(URI.create(ENDPOINT))
                     .header("Authorization", "Bearer " + API_TOKEN)
                     .header("Content-Type", "application/json")
                     .POST(HttpRequest.BodyPublishers.ofString(requestJson))
@@ -42,16 +74,43 @@ public class A11YMistralScorerUtil {
             HttpClient client = HttpClient.newHttpClient();
             HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
 
-            String timestamp = String.valueOf(System.currentTimeMillis());
-            String outputPath = "src/main/resources/AIResults/AI_A11Y_Score_" + timestamp + ".json";
-            Files.writeString(Path.of(outputPath), response.body());
+            String timestamp = new SimpleDateFormat("yyyyMMdd_HHmmss").format(new Date());
+            Path outputPath = Paths.get(outBase.getAbsolutePath(), "AI_A11Y_Score_" + timestamp + ".json");
+            Files.createDirectories(outputPath.getParent());
+            Files.writeString(outputPath, response.body());
 
+            String aiOutput = response.body();
             System.out.println("✅ HuggingFace A11Y Response:");
-            System.out.println(response.body());
+            System.out.println(aiOutput);
             System.out.println("📝 Response saved to: " + outputPath);
+
+            String confidence = extractConfidence(aiOutput);
+            String top3 = extractTop3Summary(aiOutput);
+            String badge = extractBadge(aiOutput);
+
+            return new A11YAIResultDTO(confidence, top3, badge, outputPath.toString());
 
         } catch (Exception e) {
             e.printStackTrace();
+            return null;
         }
+    }
+
+    private static String extractConfidence(String response) {
+        Matcher m = Pattern.compile("(\\d{1,3})").matcher(response);
+        if (m.find()) return m.group(1);
+        return "Unknown";
+    }
+
+    private static String extractTop3Summary(String response) {
+        int start = response.indexOf("1.") != -1 ? response.indexOf("1.") : 0;
+        return response.substring(start).split("\n3\\.|\\n\\n")[0].trim();
+    }
+
+    private static String extractBadge(String response) {
+        if (response.toUpperCase().contains("PASS")) return "PASS";
+        if (response.toUpperCase().contains("NEEDS REVIEW")) return "NEEDS REVIEW";
+        if (response.toUpperCase().contains("FAIL")) return "FAIL";
+        return "Unknown";
     }
 }
